2007-06-07 Sergii Stoian <stoyan255@gmail.com>

	* Source/NSBrowser.m: ([drawWithFrame:inView:]) pass inset rect by
	1 to drawInteriorWithFrame:.

2007-06-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOpenPanel.m: In -filenames append name to directory using
	the standard method rather than by concatenating them joined by a
	slash.  Might fix bug #19929 but even if it doesn't cure that, it
	certainly fixes an error.

2007-05-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSView.m: ([scrollRect:by:]) restrict scrolled rectangle to
	the bounds of the view.

2007-05-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m
	(-runOperationModalForWindow:...contextInfo:,
	-_printOperationDidRun:returnCode:contextInfo:) Only set and use
	GSModalRunDelegate and GSModalRunSelector values when not nil.

2007-05-17 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFont.m: Revert incorrect matrix equality test change.

2007-05-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/AppKit/NSFontDescriptor.h: tidied indentation etc.
	* Source/NSFont.m: Tidied for coding standards.  Fixed memory leak.
	Fixed error in matrix equality test.

2007-05-16 Riccardo Mottola <rmottola@users.sf.net>

	* Headers/AppKit/NSFontDescriptor.h : added from mgstep
	* Source/NSFont.* : added font descriptor related methods and
	  NSFontDescriptor implementation
 	* GNUMakefile: added NSFontDescriptor

2007-05-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTextAttachment.m: For MacOS-X compatibility, don't call
	([-setAttachment:]) on the cell if the cell class doesn't implement
	it.

2007-05-10 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSAnimation.m: removed some C99-isms
	* Source/NSBitmapImageRep+GIF.m : removed some C99-isms
	* Source/NSDocument.m : removed some C99-isms


2007-05-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAnimation.m: removed some C99-isms and simplified by
	removing attempt to avoid locking when in single threaded mode.