@@ -220,15 +220,14 @@ static BOOL _gs_display_reading_progress = NO;
   [_form release];
 
   r = NSMakeRect (43, 6, 27, 27);
-  button = [[NSButton alloc] initWithFrame: r]; 
+  button = [[NSButton alloc] initWithFrame: r];
+  [button setRefusesFirstResponder: YES];
   [button setBordered: YES];
-  [button setButtonType: NSMomentaryPushButton];
   image = [NSImage imageNamed: @"common_Home"];
   [button setImage: image];
   [button setImagePosition: NSImageOnly]; 
   [button setTarget: self];
   [button setAction: @selector(_setHomeDirectory)];
-  // [_form setNextKeyView: button];
   [button setAutoresizingMask: NSViewMinXMargin];
   [button setTag: NSFileHandlingPanelHomeButton];
   [_bottomView addSubview: button];
@@ -238,8 +237,8 @@ static BOOL _gs_display_reading_progress = NO;
   
   r = NSMakeRect (78, 6, 27, 27);
   button = [[NSButton alloc] initWithFrame: r];
+  [button setRefusesFirstResponder: YES];
   [button setBordered: YES];
-  [button setButtonType: NSMomentaryPushButton];
   image = [NSImage imageNamed: @"common_Mount"]; 
   [button setImage: image]; 
   [button setImagePosition: NSImageOnly]; 
@@ -254,8 +253,8 @@ static BOOL _gs_display_reading_progress = NO;
 
   r = NSMakeRect (112, 6, 27, 27);
   button = [[NSButton alloc] initWithFrame: r];
+  [button setRefusesFirstResponder: YES];
   [button setBordered: YES];
-  [button setButtonType: NSMomentaryPushButton];
   image = [NSImage imageNamed: @"common_Unmount"]; 
   [button setImage: image];
   [button setImagePosition: NSImageOnly]; 
@@ -270,8 +269,8 @@ static BOOL _gs_display_reading_progress = NO;
   
   r = NSMakeRect (148, 6, 71, 27);
   button = [[NSButton alloc] initWithFrame: r]; 
+  [button setRefusesFirstResponder: YES];
   [button setBordered: YES];
-  [button setButtonType: NSMomentaryPushButton];
   [button setTitle:  @"Cancel"];
   [button setImagePosition: NSNoImage]; 
   [button setTarget: self];
@@ -285,8 +284,8 @@ static BOOL _gs_display_reading_progress = NO;
   
   r = NSMakeRect (228, 6, 71, 27);
   _okButton = [[NSButton alloc] initWithFrame: r]; 
+  [button setRefusesFirstResponder: YES];
   [_okButton setBordered: YES];
-  [_okButton setButtonType: NSMomentaryPushButton];
   [_okButton setTitle:  @"OK"];
   [_okButton setImagePosition: NSImageRight]; 
   [_okButton setImage: [NSImage imageNamed: @"common_ret"]];
@@ -311,6 +310,7 @@ static BOOL _gs_display_reading_progress = NO;
   [button setImage: image];
   [button setBordered: NO];
   [button setEnabled: NO];
+  [[button cell] setImageDimsWhenDisabled: NO];
   [button setImagePosition: NSImageOnly];
   [button setAutoresizingMask: NSViewMinYMargin];
   [button setTag: NSFileHandlingPanelImageButton];
